crates/cli/tests/snapshots/project_graph_test__helpers__many_projects.snap
---
source: crates/cli/tests/helpers.rs
expression: "String::from_utf8(assert.get_output().stdout.to_owned()).unwrap()"

---
digraph {
  WORKSPACE [style="filled", shape=circle, fillcolor=black, fontcolor=white];
  advanced [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> advanced [arrowhead=none];
  bar [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> bar [arrowhead=none];
  basic [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> basic [arrowhead=none];
  noConfig -> basic [arrowhead=box, arrowtail=box];
  baz [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> baz [arrowhead=none];
  emptyConfig [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> emptyConfig [arrowhead=none];
  foo [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> foo [arrowhead=none];
  bar -> foo [arrowhead=box, arrowtail=box];
  baz -> foo [arrowhead=box, arrowtail=box];
  noConfig [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> noConfig [arrowhead=none];
}


