crates/cli/tests/snapshots/project_graph_test__helpers__no_projects.snap
---
source: crates/cli/tests/helpers.rs
expression: "String::from_utf8(assert.get_output().stdout.to_owned()).unwrap()"

---
digraph {
  WORKSPACE [style="filled", shape=circle, fillcolor=black, fontcolor=white];
}


