crates/cli/tests/snapshots/project_graph_test__helpers__single_project_with_deps.snap
---
source: crates/cli/tests/helpers.rs
expression: "String::from_utf8(assert.get_output().stdout.to_owned()).unwrap()"

---
digraph {
  WORKSPACE [style="filled", shape=circle, fillcolor=black, fontcolor=white];
  foo [style="filled", shape=circle, fillcolor=palegreen, fontcolor=black];
  WORKSPACE -> foo [arrowhead=none];
  bar [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> bar [arrowhead=none];
  foo -> bar [arrowhead=box, arrowtail=box];
  baz [style="filled", shape=circle, fillcolor=gray, fontcolor=black];
  WORKSPACE -> baz [arrowhead=none];
  foo -> baz [arrowhead=box, arrowtail=box];
}


